tests/NormalTests/paczka1/fuzzy1/79380488.err
Error in line 6: LuTZPQboHie A527 76,3
Error in line 16: A614 A749 228,79
Error in line 17: sfnb4 A614 204,1
Error in line 30: wknW A832 127,2
Error in line 32: sfnb4 A27 9,9
